--- a/src/components/pages/pageMain/PageMain.scss
+++ b/src/components/pages/pageMain/PageMain.scss
@@ -11,13 +11,15 @@ margin: 0 auto;
   align-items:flex-end;
   // align-items: center;
   gap: 32px;
-  
+ 
 };
 &__filter-form{
   width: 30%;
+  padding: 0 8px;
 }
 &__content{
   width: 70%;
+  padding: 0 8px;
 }
 
 
