--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -13,7 +13,7 @@
 ul,
 li,
 dl {
-  list-style-type: none;
+  // list-style-type: none;
   margin: 0;
   padding: 0;
 }
@@ -38,3 +38,20 @@ p {
 //   margin: 0 auto;
 //   padding: 30px;
 // }
+
+button{
+  color: $white;
+  background-color: $blue-500-main;
+  padding: 4px 20px;
+  border-radius: 8px;
+  border: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 24px;
+  &:hover{
+    background-color: $blue-400;
+  }
+  &:active{
+    background-color: $blue-600;
+  }
+}
