--- a/src/components/VacancyListItem/VacancyListItem.scss
+++ b/src/components/VacancyListItem/VacancyListItem.scss
@@ -15,6 +15,7 @@
     font-size: 20px;
     line-height: 24px;
     margin-bottom: 12px;
+    max-width: 88%;
   }
   &__text-salary {
     display: inline-block;
@@ -29,10 +30,39 @@
     color:$grey-600;
     display: inline;
     padding: 0 12px;
-    // font-size: 30px;
-    //    line-height: 16px;
-    //  list-style-type: circle;
-    &__location {
-    }
   }
+  &__text-location {
+    vertical-align:middle;
+    line-height: 20px;
+  }
+  &__text-location svg {
+    vertical-align:middle;
+    margin-right: 10px;
+    stroke:$grey-500;
+  }
+  // &__btn-favorite{
+  //   padding: 0;
+  //   margin: 0;
+  //   background:none;
+  //   border:none;
+   
+  // }
+  &__btn-favorite{
+    display: inline-block;
+    position: absolute;
+    top: 25px;
+    right: 25px;
+  }
+
 }
+
+@media screen and (max-width: 479px) {
+  .vacancy{
+  &__text-salary {
+    display: block;
+  }
+  &__text-dot {
+    padding: 0 15px 0 6px;
+  }
+}}
+
