--- a/src/components/search/Search.scss
+++ b/src/components/search/Search.scss
@@ -16,7 +16,7 @@
     text-overflow: ellipsis;
     &::placeholder {
       color: $grey-500;
-      background: url(../../resources/icon/search.svg) no-repeat;
+      background: url(../../resources/img/search.svg) no-repeat;
     }
   }
   &__btn {
