--- a/src/pages/error404Page/Error404Page.scss
+++ b/src/pages/error404Page/Error404Page.scss
@@ -1,4 +1,4 @@
-@import "../../../style/variables.scss";
+@import "../../style/variables.scss";
 
 .page404{
   display: flex;
@@ -33,7 +33,9 @@
   &:hover {
     text-decoration: none;
     background: $grey-100;
-    color: $main-color;
+    // color: $main-color;
+    color: $blue-400;
+    
   }
 }
 
