--- a/src/components/VacancyListItem/VacancyListItem.scss
+++ b/src/components/VacancyListItem/VacancyListItem.scss
@@ -17,6 +17,10 @@
     margin-bottom: 12px;
     max-width: 88%;
   }
+  &__text-firm {
+    line-height: 24px;
+    margin-bottom: 12px;
+  }
   &__text-salary {
     display: inline-block;
     font-weight: 600;
@@ -27,42 +31,42 @@
     margin-bottom: 12px;
   }
   &__text-dot {
-    color:$grey-600;
+    color: $grey-600;
     display: inline;
     padding: 0 12px;
   }
   &__text-location {
-    vertical-align:middle;
+    vertical-align: middle;
     line-height: 20px;
   }
   &__text-location svg {
-    vertical-align:middle;
+    vertical-align: middle;
     margin-right: 10px;
-    stroke:$grey-500;
+    stroke: $grey-500;
   }
-  // &__btn-favorite{
-  //   padding: 0;
-  //   margin: 0;
-  //   background:none;
-  //   border:none;
-   
-  // }
-  &__btn-favorite{
+  &__btn-favorite {
     display: inline-block;
     position: absolute;
     top: 25px;
     right: 25px;
   }
-
+  &__loader {
+    display: block;
+    margin: 0 auto;
+  }
+  &__text-empty {
+    margin-top: 40px;
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 479px) {
-  .vacancy{
-  &__text-salary {
-    display: block;
+  .vacancy {
+    &__text-salary {
+      display: block;
+    }
+    &__text-dot {
+      padding: 0 15px 0 6px;
+    }
   }
-  &__text-dot {
-    padding: 0 15px 0 6px;
-  }
-}}
-
+}
