--- a/src/components/VacancyListItem/VacancyListItem.scss
+++ b/src/components/VacancyListItem/VacancyListItem.scss
@@ -2,71 +2,11 @@
 
 .vacancy {
   &__item {
-    padding: 24px;
     position: relative;
-    list-style-type: none;
-    border: 1px solid $grey-200;
-    border-radius: 8px;
     margin-bottom: 16px;
-  }
-  &__title {
-    color: $blue-500-main;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    margin-bottom: 12px;
-    max-width: 88%;
-  }
-  &__text-firm {
-    line-height: 24px;
-    margin-bottom: 12px;
-  }
-  &__text-salary {
-    display: inline-block;
-    font-weight: 600;
-    margin-bottom: 12px;
-  }
-  &__text-employment {
-    display: inline-block;
-    margin-bottom: 12px;
-  }
-  &__text-dot {
-    color: $grey-600;
-    display: inline;
-    padding: 0 12px;
-  }
-  &__text-location {
-    vertical-align: middle;
-    line-height: 20px;
-  }
-  &__text-location svg {
-    vertical-align: middle;
-    margin-right: 10px;
-    stroke: $grey-500;
-  }
-  &__btn-favorite {
-    display: inline-block;
-    position: absolute;
-    top: 25px;
-    right: 25px;
-  }
-  &__loader {
-    display: block;
-    margin: 0 auto;
-  }
-  &__text-empty {
-    margin-top: 40px;
-    text-align: center;
-  }
-}
-
-@media screen and (max-width: 479px) {
-  .vacancy {
-    &__text-salary {
-      display: block;
-    }
-    &__text-dot {
-      padding: 0 15px 0 6px;
+    list-style-type: none;
+    a {
+      text-decoration: none;
     }
   }
 }
