--- a/src/components/filter/Filter.scss
+++ b/src/components/filter/Filter.scss
@@ -8,7 +8,13 @@
     vertical-align: middle;
     margin-bottom: 32px;
   }
-
+  &__btn-submit{
+    width: 100%;
+    max-width: 100%;
+    height: 40px;
+    padding: 4px 20px;
+    border: none;
+  }
   &__btn-reset {
     border: none;
     width: fit-content;
@@ -36,6 +42,6 @@
 }
 
 .mantine-NumberInput-root:last-of-type {
-  margin-bottom: 0;
+  margin-bottom: 20px;
 }
 
