--- a/src/components/logo/Logo.scss
+++ b/src/components/logo/Logo.scss
@@ -10,7 +10,9 @@
   height: fit-content;
 }
 .logo p {
+  font-family: 'Poppins', sans-serif;
   font-weight: 600;
   font-size: 24px;
   line-height: 36px;
+  letter-spacing: -0.014em;
 }
