--- a/src/components/search/Search.scss
+++ b/src/components/search/Search.scss
@@ -20,20 +20,12 @@
     }
   }
   &__btn {
+    width: 83px;
+    height: 32px;
+    padding: 4px 20px;
+    border: none;
     position: absolute;
     top: 8px;
     right: 12px;
-    // width: 83px;
-    // height: 32px;
-    // height: 32px;
-    // color: $white;
-    // background-color: $blue-500-main;
-    // padding: 4px 20px;
-    // border-radius: 8px;
-    // border: none;
-    // font-weight: 500;
-    // font-size: 14px;
-    // line-height: 21px;
-
   }
 }
