--- a/src/pages/favoritesPage/FavoritesPage.scss
+++ b/src/pages/favoritesPage/FavoritesPage.scss
@@ -1,6 +1,6 @@
 @import "../../style/variables.scss";
 
-// .page-main{
+// .page{
 //   display: flex;
 //   flex-direction: column;
 //   align-items: center;
