--- a/src/pages/mainPage/MainPage.scss
+++ b/src/pages/mainPage/MainPage.scss
@@ -1,30 +1,34 @@
 @import "../../style/variables.scss";
 
-.page-main {
+.page {
   max-width: 100%;
-  width: 1116px;
+  width: 1148px;
   margin: 0 auto;
   padding: 0 16px;
   &__container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+  }
+  &__container--gap {
     gap: 28px;
   }
   &__filter {
-    width: 35%;
+    width: 28.226%;
     min-width: 280px;
     padding: 20px;
     border: 1px solid $grey-200;
     border-radius: 8px;
     position: relative;
+    height: fit-content;
   }
   &__content {
-    width: 65%;
+    width: 69.266%;
   }
 }
 
 @media screen and (max-width: 839px) {
-  .page-main {
+  .page {
     &__container {
       flex-direction: column;
       align-items: center;
@@ -40,7 +44,7 @@
 }
 
 @media screen and (max-width: 479px) {
-  .page-main {
+  .page {
     padding: 0 8px;
   }
 }
