--- a/src/components/buttonFavorite/ButtonFavorite.scss
+++ b/src/components/buttonFavorite/ButtonFavorite.scss
@@ -2,9 +2,29 @@
 
 .vacancy {
   &__btn-favorite {
-    display: inline-block;
+    width: 22px;
+    height: 22px;
+    display: block;
+    border: none;
     position: absolute;
     top: 25px;
     right: 25px;
+  }
+}
+
+.btn-favorite {
+  width: 100%;
+  height: 100%;
+  stroke: $grey-500;
+  &:hover {
+    stroke: $blue-400;
+  }
+  &:active {
+    stroke: $blue-500-main;
+    fill: $blue-500-main;
+  }
+  &--active {
+    stroke: $blue-500-main;
+    fill: $blue-500-main;
   }
 }
