add button to vacancy page

--- a/src/components/vacancyDescription/VacancyDescription.scss
+++ b/src/components/vacancyDescription/VacancyDescription.scss
@@ -7,6 +7,6 @@
   border-radius: 8px;
 }
 
-.vacancy__header ~ .vacancy__description {
+.vacancy__header-container ~ .vacancy__description {
   margin-top: 20px;
 }
