--- a/src/components/search/Search.scss
+++ b/src/components/search/Search.scss
@@ -6,18 +6,26 @@
     max-width: 100%;
     position: relative;
   }
+  &__input-component {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+  &__input-icon {
+    position: absolute;
+    color: $grey-500;
+    width: 16px;
+    height: 16px;
+    left: 12px;
+  }
   &__input {
     height: 48px;
     width: 100%;
-    padding-left:14px ;
+    padding-left: 36px;
     padding-right: 100px;
     border: 1px solid $grey-200;
     border-radius: 8px;
     text-overflow: ellipsis;
-    &::placeholder {
-      color: $grey-500;
-      background: url(../../resources/img/search.svg) no-repeat;
-    }
   }
   &__btn {
     width: 83px;
