--- a/src/components/vacancyList/styles.scss
+++ b/src/components/vacancyList/styles.scss
@@ -1,6 +1,6 @@
 .vacancy {
   &__list {
-    min-height: 630px; ;
+    min-height: 630px;
     height: fit-content;
     margin-bottom: 40px;
   }
@@ -10,6 +10,5 @@
   }
   &__pagination {
     margin-bottom: 40px;
-    // justify-content: center;
   }
 }
