--- a/src/components/buttonFavorite/styles.scss
+++ b/src/components/buttonFavorite/styles.scss
@@ -1,4 +1,4 @@
-@import "../../style/variables.scss";
+@import "../../styles/variables.scss";
 
 .vacancy {
   &__btn-favorite {
@@ -11,7 +11,6 @@
     right: 25px;
   }
 }
-
 .btn-favorite {
   width: 100%;
   height: 100%;
