--- a/src/components/filter/styles.scss
+++ b/src/components/filter/styles.scss
@@ -1,4 +1,4 @@
-@import "../../style/variables.scss";
+@import "../../styles/variables.scss";
 
 .filter {
   &__title {
@@ -8,7 +8,7 @@
     vertical-align: middle;
     margin-bottom: 32px;
   }
-  &__btn-submit{
+  &__btn-submit {
     width: 100%;
     max-width: 100%;
     height: 40px;
@@ -40,8 +40,6 @@
 .mantine-NumberInput-root {
   margin-bottom: 8px;
 }
-
 .mantine-NumberInput-root:last-of-type {
   margin-bottom: 20px;
 }
-
