--- a/src/components/logo/styles.scss
+++ b/src/components/logo/styles.scss
@@ -10,7 +10,7 @@
   height: fit-content;
 }
 .logo p {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: 24px;
   line-height: 36px;
