--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -3,10 +3,12 @@
 
 * {
   font-family: "Inter", sans-serif;
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
   color: $main-color;
+}
+
+input {
+  caret-color: $blue-500-main;
 }
 
 ul,
@@ -38,7 +40,7 @@ p {
   color: $white;
 }
 
-.mantine-Pagination-control:hover:not(:disabled) svg path{
+.mantine-Pagination-control:hover:not(:disabled) svg path {
   stroke: $white;
   fill: $white;
 }
@@ -73,17 +75,6 @@ p {
   }
 }
 
-// .mantine-ActionIcon-root  svg {
-//   stroke: $grey-500;
-//   &:hover {
-//     stroke: $blue-400;
-//   }
-//   &:active {
-//     stroke: $blue-500-main;
-//     fill: $blue-500-main;
-//   }
-// }
-
 .mantine-ActionIcon-root > p {
   color: $grey-500;
   &:hover {
@@ -93,6 +84,8 @@ p {
     color: $blue-500-main;
   }
 }
+
+
 
 .mantine-NumberInput-control {
   border: none;
